fixed all the css that where not responsive in small screens.

--- a/src/index.css
+++ b/src/index.css
@@ -1288,6 +1288,11 @@ img {
   gap: 1rem;
 }
 
+.review-card:not(:last-child) {
+  padding-bottom: 1rem;
+  border-bottom: 1px solid var(--color-light-gray);
+}
+
 .review-card .review-header {
   width: 100%;
   display: flex;
@@ -1432,6 +1437,24 @@ img {
     flex-direction: column;
     gap: 0.5rem;
   }
+
+  .review-list {
+    gap: 1rem;
+  }
+
+  .review-card {
+    gap: 0.5rem;
+
+    .review-date {
+      font-size: var(--f-xs);
+      line-height: var(--l-normal);
+    }
+
+    .review-comment p {
+      font-size: var(--f-sm);
+      line-height: var(--l-normal);
+    }
+  }
 }
 
 /* Review Page */
@@ -1503,6 +1526,16 @@ img {
   gap: 0.5rem;
 }
 
+.recommend-option-list label input {
+  width: 16px;
+  height: 16px;
+  accent-color: #996954;
+}
+
+.recommend-option-list label input:checked {
+  accent-color: #996954;
+}
+
 .form-group-item .recommend-option-list span {
   font-size: var(--f-normal);
   display: inline-block;
@@ -1534,6 +1567,32 @@ img {
   gap: 1rem;
   justify-content: flex-end;
   margin-top: 2rem;
+}
+
+.review-pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+
+.review-pagination span {
+  font-size: var(--f-sm);
+  font-weight: 400;
+  line-height: var(--l-normal);
+  color: var(--text-color);
+}
+
+.review-pagination button {
+  padding: 0.5rem 1rem;
+  background: none;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.review-pagination button:disabled {
+  cursor: not-allowed;
 }
 
 @media (max-width: 768px) {
@@ -1596,6 +1655,14 @@ img {
     justify-content: start;
     align-items: start;
     cursor: pointer;
+  }
+
+  .recommend-option-list label input {
+    width: 10px;
+    height: 10px;
+  }
+  .recommend-option-list label input:checked {
+    accent-color: #996954;
   }
 
   .review-page-container
@@ -2444,6 +2511,15 @@ img {
 .checkout-page .checkout-header {
   width: 100%;
   display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.checkout-page .checkout-header .checkout-header-container {
+  width: 100%;
+  display: flex;
   justify-content: space-between;
   align-items: center;
   padding-right: 1rem;
@@ -2511,6 +2587,11 @@ img {
   transform: scale(1.4);
   margin-right: 8px;
   cursor: pointer;
+  accent-color: #996954;
+}
+
+.radio-btn-container input[type="radio"]:checked {
+  accent-color: #996954;
 }
 
 .payment-method-card .radio-btn-container {
@@ -2640,7 +2721,9 @@ img {
 
 .summary-items .summary-item {
   width: 100%;
-  display: flex;
+  height: 113px;
+  display: grid;
+  grid-template-columns: auto 1fr;
   justify-content: start;
   align-items: start;
   gap: 1rem;
@@ -2653,11 +2736,16 @@ img {
   border: none;
 }
 
-.summary-items .summary-item span,
+.summary-items .summary-item span {
+  font-size: var(--f-sm);
+  font-weight: 400;
+  color: #bcb8b1;
+}
+
 .summary-items .summary-item .item-price {
   font-size: var(--f-sm);
-  font-weight: 500;
-  color: #726f6f;
+  font-weight: 400;
+  color: var(--text-color);
 }
 
 .summary-items .summary-item p {
@@ -2680,6 +2768,31 @@ img {
   justify-content: space-between;
   align-items: start;
   gap: 0.5rem;
+  overflow: hidden;
+}
+
+.summary-items .summary-item .item-info .item-info-end {
+  height: 76px;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.summary-items .item-info-end .remove-item-btn {
+  font-size: var(--f-xs);
+  font-weight: 400;
+  color: #bcb8b1;
+  line-height: var(--l-normal);
+  background-color: transparent;
+  text-decoration: underline;
+  cursor: pointer;
+  border: none;
+  padding: 0;
+  display: block;
+  margin-top: auto;
 }
 
 .summary-item .item-details {
@@ -2688,6 +2801,8 @@ img {
   align-items: start;
   gap: 0.5rem;
   flex-direction: column;
+  flex: 1;
+  min-width: 0;
 }
 
 .summary-items .summary-item .item-image {
@@ -2789,6 +2904,11 @@ img {
   .payment-method-card {
     width: 100%;
     padding-block: 0.75rem;
+
+    & input[type="radio"] {
+      width: 10px;
+      height: 10px;
+    }
   }
 
   .checkout-right {
@@ -2854,7 +2974,66 @@ img {
   }
 
   .checkout-header h2 {
-    font-size: var(--f-md);
+    font-size: var(--f-sm);
+  }
+
+  .login-account > * {
+    font-size: var(--f-sm);
+  }
+
+  .checkout-page .checkout-header .checkout-header-container {
+    flex-direction: column;
+    align-items: start;
+
+    .login-account {
+      width: 100%;
+      justify-content: space-between;
+      display: flex;
+      align-items: start;
+    }
+  }
+
+  .summary-items {
+    width: 100%;
+
+    .summary-item {
+      height: 80px;
+      padding-block: 0.5rem;
+    }
+
+    .summary-item span,
+    .summary-item .item-price {
+      font-size: var(--f-xs);
+    }
+
+    .summary-item p {
+      font-size: var(--f-xs);
+    }
+
+    .summary-item .item-name {
+      width: 100%;
+      font-size: var(--f-xs);
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
+
+    .summary-item .item-info {
+      gap: 0.25rem;
+    }
+
+    .item-info-end {
+      height: 61px !important;
+    }
+
+    .summary-item .item-details {
+      gap: 0.25rem;
+    }
+
+    .summary-item .item-image {
+      width: 60px;
+      height: 60px;
+    }
   }
 }
 
